# flowright

./: .gitignore  README.md  pyproject.toml
flowright/: client.py  commands.py  components.py  config.py  customization.py  messages.py  server.py
flowright/res/: client.html
