[tool.poetry]
name = "flowright"
version = "0.1.0"
description = ""
authors = ["ReeceJones <reece_jones@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.26.1"
uvicorn = "^0.21.1"
websockets = "^11.0.1"
pydantic = "^1.10.7"
aiofiles = "^23.1.0"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
